force-app/main/default/objects/Notification_Permission__mdt/Notification_Permission__mdt.object-meta.xml
<CustomObject>
    <label>Notification Permission</label>
    <pluralLabel>Notification Permissions</pluralLabel>
</CustomObject>