force-app/main/default/objects/Notification_Permission__mdt/fields/Application__c.field-meta.xml
<CustomField>
    <fullName>Application__c</fullName>
    <label>Application</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ICON</fullName>
                <default>true</default>
                <label>ICON</label>
            </value>
            <value>
                <fullName>IDENTITY</fullName>
            </value>
            <value>
                <fullName>CARE SERVICE</fullName>
            </value>
            <value>
                <fullName>ONLINE APPOINTMENT</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>