force-app/main/default/objects/Notification_Permission__mdt/fields/Channel__c.field-meta.xml
<CustomField>
    <fullName>Channel__c</fullName>
    <label>Channel (beta)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>EMAIL MARKETING CLOUD</fullName>
                <default>true</default>
                <label>EMAIL MARKETING CLOUD</label>
            </value>
            <value>
                <fullName>EMAIL TEMPLATE</fullName>
            </value>
            <value>
                <fullName>LINE</fullName>
            </value>
            <value>
                <fullName>PUSH NOTIFICATION</fullName>
            </value>
            <value>
                <fullName>SMS</fullName>
            </value>
            <value>
                <fullName>SMS MARKETING CLOUD</fullName>
            </value>
            <value>
                <fullName>WECHAT</fullName>
            </value>
            <value>
                <fullName>REAL TIME</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>