force-app/main/default/objects/Notification_Permission__mdt/fields/Countries__c.field-meta.xml
<CustomField>
    <fullName>Countries__c</fullName>
    <label>Countries (Country Names) beta</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>