force-app/main/default/objects/Notification_Permission__mdt/fields/Excluded_Countries__c.field-meta.xml
<CustomField>
    <fullName>Excluded_Countries__c</fullName>
    <label>Excluded Countries (Country Names)</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>