force-app/main/default/objects/Notification_Permission__mdt/fields/Mode__c.field-meta.xml
<CustomField>
    <fullName>Mode__c</fullName>
    <label>Mode</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>WW</fullName>
                <default>true</default>
                <label>WW</label>
            </value>
            <value>
                <fullName>Unavailable</fullName>
            </value>
            <value>
                <fullName>Filtered</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>