force-app/main/default/objects/Notification_Permission__mdt/fields/Scenario__c.field-meta.xml
<CustomField>
    <fullName>Scenario__c</fullName>
    <label>Scenario(beta)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>