force-app/main/default/objects/Notification_Permission__mdt/fields/Stores__c.field-meta.xml
<CustomField>
    <fullName>Stores__c</fullName>
    <label>Stores (Store Codes) beta</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>